Update target SDK version to Android Lollipop